--- a/blogs/aks_loadbalancing_options/printhostname-service-public.yaml
+++ b/blogs/aks_loadbalancing_options/printhostname-service-public.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: debug-svc
+  name: printhostname-svc
 spec:
   type: LoadBalancer
   ports:
   - port: 80
   selector:
-    app: debug
+    app: printhostname
